--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "dev-con": "concurrently \"npm run dev\" \"npm run server --prefix server\"",
-    "server": "nodemon ./server.js"
+    "server": "nodemon ./server/server.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
@@ -41,7 +40,6 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
-    "concurrently": "^8.0.1",
     "vite": "^4.2.0",
     "nodemon": "^2.0.22"
   }
