--- a/package.json
+++ b/package.json
@@ -7,15 +7,26 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "server": "nodemon ./server/server.js"
+    "server": "nodemon ./server/server.js",
+    "dev-con": "concurrently \"npm run server\" \"npm run dev\""
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "bcrypt": "^5.1.0",
     "chart.js": "^4.2.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "cronitor": "^2.3.3",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
+    "node-cron": "^3.0.2",
+    "pexels": "^1.4.0",
+    "pg": "^8.10.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -23,24 +34,15 @@
     "react-router-dom": "^6.10.0",
     "react-table": "^7.8.0",
     "recharts": "^2.5.0",
-    "socket.io-client": "^4.6.1",
-    "bcrypt": "^5.1.0",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "cronitor": "^2.3.3",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "node-cron": "^3.0.2",
-    "pexels": "^1.4.0",
-    "pg": "^8.10.0",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.2.0",
-    "nodemon": "^2.0.22"
+    "concurrently": "^8.2.0",
+    "nodemon": "^2.0.22",
+    "vite": "^4.2.0"
   }
 }
